--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb
+
+spring.jackson.default-property-inclusion=non_null
+spring.jackson.property-naming-strategy=SNAKE_CASE
