--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -1,4 +1,6 @@
-spring.profiles.active=prod
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.flyway.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
