EventService search tests addition

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=prod
+spring.profiles.active=develop
 spring.flyway.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
