--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -1,9 +1,5 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.flyway.enabled=true
 spring.jpa.hibernate.ddl-auto=update
-server.port=8081
-
-spring.jackson.default-property-inclusion=non_null
-spring.jackson.property-naming-strategy=SNAKE_CASE
+spring.jpa.show-sql=true
